--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "0.13.9",
+    "react-tagcloud": "^2.0.0",
     "recharts": "^2.0.2"
   },
   "scripts": {
